fixed page overflow bug

--- a/myServer/Landing_page/index.css
+++ b/myServer/Landing_page/index.css
@@ -12,6 +12,12 @@ body{
     background-color: #e6d5b8;
     font-family: 'Space Grotesk', sans-serif;
     color: #31112c;
+    /* experiment */
+    /* width: 100%; */
+    /* height: 100%; */
+    /* margin: 0px; */
+    /* padding: 0px; */
+    overflow-x: hidden; 
 }
 
 
@@ -186,7 +192,7 @@ footer{
  @media only screen and (min-width: 320px) and (max-width: 479px) {
   #header-img{
       height: 2.5rem;
-        width: 4.2rem;
+        width: 4.9rem;
     }
   #nav-bar{
       padding: 0.5rem 0;
@@ -194,7 +200,7 @@ footer{
   
   .nav-link{
       padding: 0.5rem;
-      margin-right: 0.5rem;
+      margin-right: 0.6rem;
   }
   
   a{
